# mlx-flash

./: .coverage  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: benchmark_context.py  run_synthetic_proof.py
docs/: architecture.md  findings.md  upstream_pr.md
examples/: flash_demo_30b.py
mlx_engine_flash/: __init__.py  config.py  diagnostics.py  generation.py  loader.py  manager.py  monitor.py  page_cache.py  streamer.py
mlx_engine_flash/integration/: lmstudio.py
mlx_flash/: __init__.py  cli.py  disk_kv_cache.py  generation.py  manager.py  page_cache.py  prefetch_worker.py  safetensors_mmap.py  tiled.py
mlx_flash/engine/: __init__.py  engine.py
mlx_flash/integration/: lmstudio.py
mlx_flash/moe/: manager.py
mlx_flash/pipeline/: executor.py
mlx_flash/quantization/: allocator.py  profiler.py
mlx_flash/scheduler/: global_scheduler.py
mlx_flash/scheduler/learned/: oracle.py  rls.py
scripts/: check_names.py  check_weights.py  diagnose_oom.py  diagnose_oom2.py  diagnose_ram.py  flash_server.py  prove_flash_manual.py  run_matrix_experiments.py  setup_github_runner.sh  test_clear_cache.py  test_eval_behavior.py  test_local_nemotron.py  test_nemotron.py  test_nemotron_cascade.py
tests/: conftest.py  test_config.py  test_core_invariant.py  test_disk_kv_cache.py  test_disk_kv_detailed.py  test_flash_ram_budget.py  test_generation.py  test_integration.py  test_loader.py  test_memory_release.py  test_native_integration.py  test_rotating_cache_compat.py  test_sampling_correctness.py
tests/mocks/: mock_io_worker.py
tests/property/: test_math_invariants.py
tests/stress/: test_adversarial.py  test_low_ram.py
