[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-flash"
version = "0.1.1"
description = "Flash Weight Streaming (low-RAM mode) for LM Studio / mlx-engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Matt Wong", email = "matt.k.wong@gmail.com" },
]
keywords = [
    "mlx", "apple-silicon", "llm", "inference", "weight-streaming",
    "memory-optimization", "lm-studio", "macos", "flash",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mlx>=0.16.0",
    "mlx-lm>=0.20.0",
    "numpy>=1.26",
    "huggingface-hub>=0.23",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-setuptools",
]

[project.urls]
Homepage = "https://github.com/matt-k-wong/mlx-flash"
Repository = "https://github.com/matt-k-wong/mlx-flash"
Issues = "https://github.com/matt-k-wong/mlx-flash/issues"
Changelog = "https://github.com/matt-k-wong/mlx-flash/blob/main/CHANGELOG.md"

[project.scripts]
mlx-flash = "mlx_flash.cli:main"
flash-monitor = "mlx_flash.monitor:run_monitor"
flash-bench = "benchmarks.bench_flash:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
omit = [
    "mlx_flash/monitor.py",
    "mlx_flash/kernels/*",
    "mlx_flash/integration/modelfile.py"
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]
markers = [
    "stress: marks tests as stress/adversarial tests (run with -m stress)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlx_flash*", "benchmarks*", "examples*"]
